# SZPI

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  dockerhub.yml  dogodki-ci.yml  izpiti-ci.yml
dogodki/: .dockerignore  Dockerfile  pom.xml
dogodki/app/: EventService.java
dogodki/domain/: EventDocument.java
dogodki/infra/: EventRepository.java
gateway-mobile/: Dockerfile  GatewayMobile.csproj  Program.cs
gateway-mobile/Protos/: izpiti.proto
gateway-web/: Dockerfile  package-lock.json  package.json  server.js
gateway-web/api/: izpiti.proto
izpiti/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
izpiti/api/: izpiti.proto
izpiti/src/: index.ts
izpiti/src/app/: usecases.ts
izpiti/src/domain/: examTerm.ts
izpiti/src/grpc/: server.ts
izpiti/tests/: grpc.test.ts  repoPostgres.int.test.ts  usecases.test.ts
studenti/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
studenti/src/studenti/api/: deps.py  main.py  routes.py
studenti/src/studenti/aplikacija/: use_cases.py
studenti/src/studenti/domena/: entities.py
studenti/src/studenti/infrastruktura/: db.py  models.py  repositories.py
studenti/tests/: conftest.py  test_endpoints.py  test_repository.py
web/: package-lock.json
web/mf-izpiti/: index.html  package-lock.json  package.json  vite.config.ts
web/mf-studenti/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/shell/: package-lock.json  package.json  vite.config.ts
workflows/: ci.yml
(+19 files in other folders)
